logs/dependencyinjection.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dependencyinjection'...
Listing './lib/python3.5/site-packages/dependencyinjection/internal'...
Compiling './lib/python3.5/site-packages/dependencyinjection/internal/descriptors.py'...
***   File "./lib/python3.5/site-packages/dependencyinjection/internal/descriptors.py", line 48
    type_resolver: ParameterTypeResolver = provider.get(ParameterTypeResolver)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dependencyinjection/internal/provider.py'...
***   File "./lib/python3.5/site-packages/dependencyinjection/internal/provider.py", line 31
    self._cache: typing.Dict[type, object] = {} # cached service_type to instance
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dependencyinjection/internal/services.py'...
***   File "./lib/python3.5/site-packages/dependencyinjection/internal/services.py", line 29
    self._services: typing.List[Descriptor] = []
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dependencyinjection/internal/servicesmap.py'...
***   File "./lib/python3.5/site-packages/dependencyinjection/internal/servicesmap.py", line 14
    self._type_map: typing.Dict[type, typing.List[Descriptor]] = {}
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dependencyinjection-0.1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/overload-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
